--- a/src/styles/carpark.css
+++ b/src/styles/carpark.css
@@ -1,3 +1,13 @@
+.last-updated-time {
+  background-color: white;
+  position: sticky;
+  font-family: "Rubik", sans-serif;
+  font-size: .85em;
+  top: 0;
+  padding: .85em .75rem;
+  z-index: 999;
+}
+
 .carpark-list {
   list-style: none;
 }
