--- a/src/styles/carpark.css
+++ b/src/styles/carpark.css
@@ -20,7 +20,7 @@
   font-weight: 400;
   position: relative;
   padding: 1.5em;
-  /* height: 21em; */
+  height: 20em;
 }
 
 .lots-available {
@@ -91,8 +91,8 @@
   color: #0F52BA;
 }
 
-/* .buttons-container {
-  bottom: 1.6em;
+.buttons-container {
+  bottom: 1.5em;
   position: absolute;
   padding: 0 1.2em;
   right: 0;
@@ -100,6 +100,6 @@
 }
 
 .action-btn {
-  font-size: .9em;
+  font-size: .85em;
   padding: .7em .75em;
-} */
+}
