--- a/src/styles/carpark.css
+++ b/src/styles/carpark.css
@@ -12,6 +12,11 @@
   list-style: none;
 }
 
+.carpark-list a {
+  color: black;
+  text-decoration: none;
+}
+
 .carpark-info-card {
   border: 1px solid rgb(223, 223, 223);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
@@ -20,7 +25,7 @@
   font-weight: 400;
   position: relative;
   padding: 1.5em;
-  height: 20em;
+  height: 16em;
 }
 
 .lots-available {
@@ -89,17 +94,4 @@
 .free-parking-tag {
   border: 1px solid #0F52BA;
   color: #0F52BA;
-}
-
-.buttons-container {
-  bottom: 1.5em;
-  position: absolute;
-  padding: 0 1.2em;
-  right: 0;
-  width: 100%;
-}
-
-.action-btn {
-  font-size: .85em;
-  padding: .7em .75em;
 }
