--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,10 +4,20 @@
 }
 
 .logo { 
-  width: 95%;
+  width: 80%;
 }
 
 .navbar-btn {
   font-size: .9em !important;
-  padding: 0.7em 1.4em 0.7em 1.4em !important;
+  padding: 1em 1.2em !important;
+}
+
+@media (max-width: 575.98px)  {
+  .logo { 
+    width: 95%;
+  }
+
+  .navbar-btn {
+    padding: 0.9em 1em !important;
+  }
 }
