--- a/src/styles/carpark.css
+++ b/src/styles/carpark.css
@@ -152,13 +152,14 @@
 
 @media (max-width: 575.98px)  {
   .search-icon {
-    top: 1.3rem;
-    left: 1.8rem;
+    top: 1.08rem;
+    left: 1.9rem;
     font-size: 1rem;
   }
 
   .search-bar {
-    padding: .95rem 2.8rem;
+    font-size: 0.9rem;
+    padding: .85rem 2.8rem;
     width: 100%;
   }
 }
