--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,7 +8,7 @@
 }
 
 .navbar-btn {
-  font-size: .9em !important;
+  font-size: 0.9em !important;
   padding: 1em 1.2em !important;
 }
 
@@ -18,6 +18,7 @@
   }
 
   .navbar-btn {
+    font-size: 0.85em !important;
     padding: 0.9em 1em !important;
   }
 }
