--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,9 +4,9 @@
 
 .search-icon {
   position: absolute;
-  top: 1.35rem;
+  top: 1.3rem;
   left: 12.2rem;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .search-bar {
@@ -14,11 +14,12 @@
   border: 1px solid #727a81;
   box-shadow: inset 0 0.25em 0 0 #e2e2e2;
   font-family: "Rubik", sans-serif;
-  padding: 1.1rem 3.2rem;
+  font-size: 0.95rem;
+  padding: 1rem 3.2rem;
   width: 75%;
 }
 
-.last-updated-time {
+.masterhead {
   background-color: white;
   position: sticky;
   font-family: "Rubik", sans-serif;
@@ -28,6 +29,13 @@
   z-index: 999;
 }
 
+.masterhead .fa-chevron-up {
+  align-self: center;
+  cursor: pointer;
+  font-size: 0.65rem;
+  transition: 0.5s;
+}
+
 .pagination {
   list-style: none;
   font-family: "Rubik", sans-serif;
@@ -35,7 +43,7 @@
 
 .pagination-item {
   height: auto;
-  padding: 1em 0.8em;
+  padding: 1rem 0.8rem;
   width: auto;
 }
 
@@ -50,7 +58,7 @@
 
 .pagination-link {
   color: #135DD8;
-  padding: 1em 0.8em;
+  padding: 1rem 0.8rem;
   text-decoration: none;
 }
 
